--- a/emacs/.doom.d/config.org
+++ b/emacs/.doom.d/config.org
@@ -17,7 +17,7 @@ To define guix dependencies add a source code block with =:noweb-ref guix-pkg= a
             ))
  (packages
   (map (compose list specification->package+output)
-       '("emacs"
+       '("emacs-next"
          "emacs-pdf-tools"
          "emacs-telega" "emacs-telega-contrib"
          "emacs-vterm"
@@ -42,13 +42,13 @@ compile)
     ;;
 
 home)
-    $DIR/pre-inst-env guix $@ reconfigure \
+    $DIR/pre-inst-env guix home reconfigure \
         -L ~/.dotfiles/guix/personal/ \
         ~/.dotfiles/guix/home.scm
     ;;
 
 system)
-    $DIR/pre-inst-env guix $@ reconfigure --save-provenance \
+    $DIR/pre-inst-env guix system reconfigure --save-provenance \
         -L ~/.dotfiles/guix/personal/ \
         -L ~/devel/ext/nonguix/ \
         ~/.dotfiles/guix/system.scm
@@ -321,9 +321,9 @@ These are bound only for X11 apps.
 (use-package! discomfort
   :config
   (add-to-list 'evil-emacs-state-modes 'discomfort-mode)
-  (define-key discomfort-mode-map
-              "j" #'next-line
-              "k" #'previous-line))
+  (define-key! discomfort-mode-map
+    "j" #'next-line
+    "k" #'previous-line))
 #+end_src
 * theme
 #+begin_src scheme :noweb-ref guix-pkg
@@ -466,6 +466,7 @@ plocate -d /storage/500gb.plocate $@
  org-fold-catch-invisible-edits 'show-and-error)
 
 (use-package org-tidy
+  :disabled
   :hook (org-mode . org-tidy-mode))
 
 (use-package! org-contacts
